--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+
 <!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Задание 1</title>
+    <title>Страница навигации</title>
+    <link rel="stylesheet" href="./css/style.css">
     <style>
       body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
@@ -16,41 +18,15 @@
     </style>
   </head>
   <body>
-    <p><a href="index.html">На главную</a></p>
-
-    <ul id="categories">
-      <li class="item">
-        <h2>Животные</h2>
-
-        <ul>
-          <li>Кот</li>
-          <li>Хомяк</li>
-          <li>Лошадь</li>
-          <li>Попугай</li>
-        </ul>
-      </li>
-      <li class="item">
-        <h2>Продукты</h2>
-
-        <ul>
-          <li>Хлеб</li>
-          <li>Петрушка</li>
-          <li>Творог</li>
-        </ul>
-      </li>
-      <li class="item">
-        <h2>Технологии</h2>
-
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>React</li>
-          <li>Node</li>
-        </ul>
-      </li>
+    <ul>
+      <li><a href="task-01.html">Задание 1</a></li>
+      <li><a href="task-02.html">Задание 2</a></li>
+      <li><a href="task-03.html">Задание 3</a></li>
+      <li><a href="task-04.html">Задание 4</a></li>
+      <li><a href="task-05.html">Задание 5</a></li>
+      <li><a href="task-06.html">Задание 6</a></li>
+      <li><a href="task-07.html">Задание 7</a></li>
+      <li><a href="task-08.html">Задание 8</a></li>
     </ul>
-
-    <script src="js/task-01.js" type="module"></script>
   </body>
 </html>
